tests/sumo/meso/junction_control/tls_coordination/bad/control/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (2ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_20_0+0793-91f7adb8122 started with time: 0.00.
Simulation ended at time: 202.00.
Reason: All vehicles have left the simulation.
Performance:
 Duration: 0.00s
 Real time factor: 67333.3
 UPS: 778666.666667
Vehicles:
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg of 30):
 RouteLength: 300.00
 Speed: 4.30
 Duration: 77.87
 WaitingTime: 7.45
 TimeLoss: 55.73
 DepartDelay: 9.17
